--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "test:unit": "dotenv -e .env.test jest -- -i --coverage --testPathPattern=tests/unit",
+    "test:integration": "npx dotenv-cli -e .env.test -- jest -i --testPathPattern=tests/integration"
   },
   "keywords": [],
   "author": "",
@@ -20,21 +22,22 @@
     "@types/supertest": "^2.0.11",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.32.0",
-    "jest": "^28.0.3",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.12",
-    "prisma": "^3.13.0",
-    "supertest": "^6.1.3",
+    "supertest": "^6.2.4",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@prisma/client": "^3.13.0",
+    "@faker-js/faker": "^7.5.0",
+    "@prisma/client": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.4.1",
+    "prisma": "^4.3.1",
     "react-player": "^2.10.0"
   }
 }
